--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url('fundo2.png') no-repeat center center fixed;
+  background: url('Fundo2.png') no-repeat center center fixed;
   background-size: cover;
   color: #fff;
   overflow-x: hidden; /* bloqueia scroll horizontal */
@@ -270,4 +270,5 @@
   </script>
 </body>
 </html>
+
 
