--- a/index.html
+++ b/index.html
@@ -65,24 +65,29 @@
     }
 
     /* --- Carrossel --- */
-    .carrossel {
-      position: relative;
-      max-width: 800px;
-      margin: 0 auto;
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-    }
+.carrossel {
+  position: relative;
+  max-width: 100%; /* deixa responsivo */
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
 
-    .slides {
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-    }
+.slides {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+}
 
-    .slides img {
-      width: 100%;
-      border-radius: 15px;
-    }
+.slides img {
+  flex: 0 0 100%;   /* cada imagem ocupa 100% da largura do carrossel */
+  height: auto;     /* mantém proporção */
+  object-fit: cover; /* ajusta sem deformar */
+  border-radius: 15px;
+}
+
 
     .navegacao {
       position: absolute;
@@ -266,6 +271,7 @@
   </script>
 </body>
 </html>
+
 
 
 
