--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
   <title>Surpresa</title>
   <style>
     body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: url('Fundo2.png') no-repeat center center fixed;
-  background-size: cover;
-  color: #fff;
-  overflow-x: hidden; /* bloqueia scroll horizontal */
-  overflow-y: auto;   /* permite scroll vertical */
-  text-align: center;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url('fundo2.png') no-repeat center center fixed;
+      background-size: cover;
+      color: #fff;
+      overflow-x: hidden;
+      overflow-y: auto;
+      text-align: center;
     }
     body::before {
-    content: "";
-     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5); /* escurece 50% */
-    z-index: -1;
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: -1;
     }
 
     /* --- Tela inicial --- */
@@ -65,29 +65,31 @@
     }
 
     /* --- Carrossel --- */
-.carrossel {
-  position: relative;
-  max-width: 100%; /* deixa responsivo */
-  width: 100%;
-  margin: 0 auto;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: 0 0 15px rgba(0,0,0,0.3);
-}
+    .carrossel {
+      position: relative;
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    }
 
-.slides {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-  width: 100%;
-}
+    .slides {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+      width: 100%;
+    }
 
-.slides img {
-  flex: 0 0 100%;   /* cada imagem ocupa 100% da largura do carrossel */
-  height: auto;     /* mantém proporção */
-  object-fit: cover; /* ajusta sem deformar */
-  border-radius: 15px;
-}
-
+    .slides img {
+      flex: 0 0 100%;
+      width: 100%;
+      height: auto;
+      max-height: 80vh;       /* limita no celular */
+      object-fit: contain;    /* mostra a foto inteira */
+      border-radius: 15px;
+      background: #000;       /* fundo preto se sobrar espaço */
+    }
 
     .navegacao {
       position: absolute;
@@ -106,6 +108,13 @@
       cursor: pointer;
       padding: 5px 10px;
       border-radius: 50%;
+    }
+
+    /* Responsividade */
+    @media (max-width: 768px) {
+      .carrossel {
+        max-width: 100%;
+      }
     }
 
     /* --- Texto romântico --- */
@@ -152,7 +161,7 @@
     <div class="carrossel">
       <div class="slides" id="slides">
         <img src="foto1.jpg" alt="Foto 1">
-        <img src="foto2.jpg" alt="Foto 2">        
+        <img src="foto2.jpg" alt="Foto 2">
         <img src="foto4.jpg" alt="Foto 4">
         <img src="foto5.jpg" alt="Foto 5">
         <img src="foto6.jpg" alt="Foto 6">
@@ -172,16 +181,16 @@
     <!-- Texto romântico -->
     <div class="texto-romantico">
       <p>
-    Desde o dia em que nos conhecemos, eu soube que queria você para o resto da minha vida.  
-    Foi difícil, mas finalmente te conquistei, e cada momento ao seu lado se torna cada vez mais especial.  
-    <br><br>
-    Quero que me acompanhe por toda a vida, para conquistarmos nossos sonhos juntos.  
-    Se você soubesse o quanto te amo, entenderia que eu faria qualquer coisa só para ver o seu lindo sorriso.  
-    <br><br>
-    Os melhores momentos da minha vida estão guardados comigo — desde o dia em que assistimos filmes juntos pelo celular até os dias em que fomos ao cinema de verdade.  
-    <br><br>
-    Passamos por tanta coisa juntos, mas cada segundo valeu a pena,  
-    porque hoje eu posso te chamar de <b>meu amor</b>. ❤️  
+        Desde o dia em que nos conhecemos, eu soube que queria você para o resto da minha vida.  
+        Foi difícil, mas finalmente te conquistei, e cada momento ao seu lado se torna cada vez mais especial.  
+        <br><br>
+        Quero que me acompanhe por toda a vida, para conquistarmos nossos sonhos juntos.  
+        Se você soubesse o quanto te amo, entenderia que eu faria qualquer coisa só para ver o seu lindo sorriso.  
+        <br><br>
+        Os melhores momentos da minha vida estão guardados comigo — desde o dia em que assistimos filmes juntos pelo celular até os dias em que fomos ao cinema de verdade.  
+        <br><br>
+        Passamos por tanta coisa juntos, mas cada segundo valeu a pena,  
+        porque hoje eu posso te chamar de <b>meu amor</b>. ❤️  
       </p>
     </div>
   </div>
@@ -192,8 +201,6 @@
   <script>
     // Data do namoro (ano, mês-1, dia, hora, min, seg)
     const startDate = new Date(2024, 8, 21, 20, 56, 0); 
-    // ⚠️ Setembro = 8 (porque janeiro = 0)
-
     const contador = document.getElementById("contador");
 
     function atualizarContador() {
@@ -206,27 +213,15 @@
       let minutos = agora.getMinutes() - startDate.getMinutes();
       let segundos = agora.getSeconds() - startDate.getSeconds();
 
-      if (segundos < 0) {
-        segundos += 60;
-        minutos--;
-      }
-      if (minutos < 0) {
-        minutos += 60;
-        horas--;
-      }
-      if (horas < 0) {
-        horas += 24;
-        dias--;
-      }
+      if (segundos < 0) { segundos += 60; minutos--; }
+      if (minutos < 0) { minutos += 60; horas--; }
+      if (horas < 0) { horas += 24; dias--; }
       if (dias < 0) {
         meses--;
         const ultimoDiaMesAnterior = new Date(agora.getFullYear(), agora.getMonth(), 0).getDate();
         dias += ultimoDiaMesAnterior;
       }
-      if (meses < 0) {
-        anos--;
-        meses += 12;
-      }
+      if (meses < 0) { anos--; meses += 12; }
 
       contador.innerHTML = `
         <p><b>${anos}</b> anos | <b>${meses}</b> meses | <b>${dias}</b> dias</p>
@@ -271,7 +266,3 @@
   </script>
 </body>
 </html>
-
-
-
-
