--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   aspect-ratio: 4 / 3;   /* formato câmera digital */
   object-fit: cover;     /* preenche sem distorcer */
   border-radius: 15px;
-  background: #000;
+  background: transparent;
 }
 
     .navegacao {
@@ -265,4 +265,5 @@
   </script>
 </body>
 </html>
+
 
