--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
     .slides img {
   flex: 0 0 100%;
   width: 100%;
-  aspect-ratio: 4 / 3;   /* formato câmera digital */
-  object-fit: cover;     /* preenche sem distorcer */
+  aspect-ratio: 4 / 3;      /* ou 1/1 se quiser quadrado */
+  object-fit: cover;        /* mantém o preenchimento */
   border-radius: 15px;
-  background: transparent;
+  background: transparent;        /* fundo preto */
 }
 
     .navegacao {
@@ -159,12 +159,12 @@
 
     <div class="carrossel">
       <div class="slides" id="slides">
-        <img src="foto1.jpg" alt="Foto 1">
-        <img src="foto2.jpg" alt="Foto 2">
-        <img src="foto4.jpg" alt="Foto 4">
-        <img src="foto5.jpg" alt="Foto 5">
-        <img src="foto6.jpg" alt="Foto 6">
-        <img src="foto8.jpg" alt="Foto 8">
+        <img src="foto1.JPG" alt="Foto 1">
+        <img src="foto2.JPG" alt="Foto 2">
+        <img src="foto4.JPG" alt="Foto 4">
+        <img src="foto5.JPG" alt="Foto 5">
+        <img src="foto6.JPG" alt="Foto 6">
+        <img src="foto8.JPG" alt="Foto 8">
         <img src="foto11.jpg" alt="Foto 11">
         <img src="foto12.jpg" alt="Foto 12">
         <img src="foto13.jpg" alt="Foto 13">
@@ -265,5 +265,6 @@
   </script>
 </body>
 </html>
+
 
 
