--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
       width: 100%;
     }
 
-    .slides img {
+   .slides img {
   flex: 0 0 100%;
   width: 100%;
-  aspect-ratio: 4 / 3;     /* mantém 4:3 */
-  object-fit: contain;     /* mostra a foto inteira */
+  height: auto;
+  max-height: 80vh;       /* limita no celular */
+  object-fit: contain;    /* mostra a foto inteira */
   border-radius: 15px;
-  background: transparent; /* deixa aparecer o fundo do site */
+  background: transparent; /* deixa ver o fundo do site */
   display: block;
 }
 
@@ -267,6 +268,7 @@
   </script>
 </body>
 </html>
+
 
 
 
