--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   max-height: 80vh;       /* limita no celular */
   object-fit: contain;    /* mostra a foto inteira */
   border-radius: 15px;
-  background: transparent; /* deixa ver o fundo do site */
+  background: none !important; /* deixa ver o fundo do site */
   display: block;
 }
 
@@ -268,6 +268,7 @@
   </script>
 </body>
 </html>
+
 
 
 
