--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('Fundo2.png') no-repeat center center fixed;
+      background-image: url('./Fundo2.png');
       background-size: cover;
       color: #fff;
       overflow-x: hidden;
@@ -268,6 +268,7 @@
   </script>
 </body>
 </html>
+
 
 
 
