--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         Quero que me acompanhe por toda a vida, para conquistarmos nossos sonhos juntos.  
         Se você soubesse o quanto te amo, entenderia que eu faria qualquer coisa só para ver o seu lindo sorriso.  
         <br><br>
-        Os melhores momentos da minha vida estão guardados comigo — desde o dia em que assistimos filmes juntos pelo celular até os dias em que fomos ao cinema de verdade.  
+        Cada lembrança ao seu lado é um tesouro, desde o dia assistindo filme por ligação até o dia em que te pedi em namoro.
         <br><br>
         Passamos por tanta coisa juntos, mas cada segundo valeu a pena,  
         porque hoje eu posso te chamar de <b>meu amor</b>. ❤️  
@@ -278,6 +278,7 @@
   </script>
 </body>
 </html>
+
 
 
 
